css/style.css
@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700&display=swap');

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  text-decoration: none;
  color: #d7d5b2;
}

html {
  background-color: var(--Tuna);
}

:root {
  --Blue: #1e89c8;
  --Yellow: #e5d823;
  --Tuna: #303036;
  --Separator: rgba(255, 255, 255, 0.04);
  --Green-Mist: #d7d5b2;
  --Hover: rgba(215, 213, 178, 0.2);
  --Cinzel: 'Cinzel', sans-serif;
}

.header {
  background-color: rgba(48, 48, 54, 0.8);
  backdrop-filter: blur(15px);
  width: 100%;
  position: fixed;
  z-index: 3;
  box-shadow: 1px 1px 10px black;
}

.header ul {
  overflow: hidden;
  list-style: none;
}

.header ul a {
  display: block;
  padding: 15px;
  transition: background-color .2s;
  font-size: 22px;
}

.header ul a:hover {
  background-color: rgba(215, 213, 178, 0.2)
}

.header .logo {
  margin-left: -10px;
  float: left;
  display: block;
  font-size: 1.8em;
  padding: 10px 20px;
  font-family: 'Cinzel', sans-serif;
  font-weight: 600;
}

.header .menu {
  clear: both;
  max-height: 0;
  transition: max-height .4s ease-out;
}

.header .menu {
  text-align: center;
}

.header .menu-icon {
  padding: 28px;
  position: relative;
  float: right;
  cursor: pointer;
}

.header .menu-icon .nav-icon {
  background-color: var(--Green-Mist);
  display: flex;
  height: 2px;
  width: 18px;
  position: relative;
  transition: background .2s ease-out
}

.header .menu-icon .nav-icon::before {
  content: "";
  background-color: var(--Green-Mist);
  display: block;
  height: 2px;
  width: 18px;
  position: absolute;
  transition: all .2s ease-out;
  top: 5px;
}

.header .menu-icon .nav-icon::after {
  content: "";
  background-color: var(--Green-Mist);
  display: block;
  height: 2px;
  width: 18px;
  position: absolute;
  transition: all .2s ease-out;
  top: -5px;
}

.header .menu-btn {
  display: none;
}

.header .menu-btn:checked ~ .menu {
  max-height: 240px;
}

.header .menu-btn:checked ~ .menu-icon .nav-icon {
  background-color: transparent;
}

.header .menu-btn:checked ~ .menu-icon .nav-icon::before {
  transform: rotate(-45deg);
  top: 0
}

.header .menu-btn:checked ~ .menu-icon .nav-icon::after {
  transform: rotate(45deg);
  top: 0
}

@media (min-width: 1024px) and (max-height: 1000px) {
  .header li {
    float: left;
  }

  .header li a {
    padding: 20px 30px;
  }

  .header .menu {
    clear: none;
    float: right;
    max-height: none;
  }

  .header .menu-icon {
    display: none;
  }
}

/* BODY  */

.spacer {
  width: 100%;
  height: 70px;
}

.main-container {
  margin: 0 20px
}

/* .main-container h1 {
  font-family: var(--Cinzel);
  font-weight: bold;
  color: yellow;
  font-size: 3em
}

.main-container h2 {
  font-family: 'Cinzel', sans-serif;
  font-size: 2em;
} */

/* SECTIONS  */

.news-section {
  display: flex;
  position: relative;
  flex-direction: column;
  border-radius: 20px;
  box-shadow: 2px 2px 10px black;
  margin-top: 50px;
  margin-bottom: 80px;
}

.news-section h1 {
  position: absolute;
  top: -40px;
  font-size: 2em;
  font-family: 'Cinzel', sans-serif;
  font-weight: 700;
  color: #e5d823;
  white-space: nowrap;
}

.news-section h2 {
  font-family: 'Cinzel', sans-serif;
  font-weight: 800;
  text-transform: capitalize;
}

.news-section p {
  font-size: 1em;
  font-family: 'Times New Roman', sans-serif;
  text-indent: 5px;
  text-align: justify;
}

.news-section img {
  width: 100%;
  height: 30vh;
  object-fit: cover;
  border-radius: 20px;
}

.news-section-info {
  margin-top: -10px;
  padding: 20px
}

.separator {
  height: 2px;
  border-radius: 20px;
  width: 35%;
  background-color: var(--Separator);
  border: 2px solid var(--Separator);
  margin: 5px 0px
}

/* OTHER NEWS  */

.other {
  display: flex;
  justify-content: center;
  position: relative;
  margin-top: -50px;
  background-color: rgb(66, 66, 66);
  border-radius: 20px;
  box-shadow: 2px 2px 10px black;
  z-index: 1;
  padding: 10px;
  white-space: pre-line;
}

.other h2 {
  font-size: 1em;
  position: absolute;
  margin-top: -30px;
  color: #1e89c8;
}

.other h3 {
  margin-top: 10px;
  font-size: 1em;
}

.other ol {
  display: flex;
  justify-content: space-between;
  list-style: decimal;
  padding: 10px;
  max-width: max-content;
}

.other ol li {
  font-size: 0.8em;
  position: relative;
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  padding: 0 10px;
  border-right: 1px solid gray;
  transition: background-color .2s ease-out;
}

.other ol li:hover {
  background-color: rgb(49, 49, 49);
}

.other ol li a:active {
  color: #e5d823;
}

.other ol li:nth-child(4) {
  border-right: none;
}

.other ol li img {
  width: 15vw;
  height: 8vh;
  border-radius: 20px;
  object-fit: cover;
}

/* FOOTER  */

.footer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
  margin-top: 60px;
  border-top: 1px solid gray;
  background-color: #1e89c8;
  height: 200px;
  width: 100%;
}

.footer .crazy {
  transition: all 2s;
  animation: click-link .6s reverse infinite;
  flex-wrap: nowrap;
}

.footer a:hover {
  color: rgb(255, 251, 0);
  font-size: 42px;
}

@keyframes click-link {
  0% {
    color: rgb(255, 0, 0);
  }
  10% {
    color: rgb(255, 157, 0);
    opacity: 1
  }

  20% {
    color: rgb(255, 230, 0);
    opacity: 1;
  }

  30% {
    color: rgb(187, 255, 0);
  }

  40% {
    color: rgb(72, 255, 0);
    opacity: 1;
  }

  50% {
    color: rgb(0, 255, 179);
    opacity: 1;
  }

  60% {
    color: rgb(0, 153, 255);
    opacity: 1;
  }

  70% {
    color: rgb(4, 0, 255);
    opacity: 1;
  }

  80% {
    color: rgb(98, 0, 255);
    opacity: 1;
  }

  90% {
    color: rgb(255, 0, 191);
    opacity: 1;
  }

  100% {
    color: rgb(255, 0, 0);
    opacity: 1;
  }

}

